@@ -1,3 +1,12 @@
+2006-12-01 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/Dialog_Progress.h,
+	  include/GParted_Core.h,
+	  src/Dialog_Progress.cc,
+	  src/GParted_Core.cc,
+	  src/Win_GParted.cc: added libparted version string to details
+	  export.
+
 2006-11-26 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	
 	* src/Win_GParted.cc: fixed bug with copying partition to a disk
